// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleThumbView renders RTL styling 1`] = `
.c0 {
  background-size: 0%;
}

<input
  className="c-range__input is-rtl c0"
  data-garden-id="ranges.single_thumb_view"
  data-garden-version="version"
  type="range"
/>
`;

exports[`SingleThumbView renders background-size correctly 1`] = `
.c0 {
  background-size: 95%;
}

<input
  className="c-range__input c0"
  data-garden-id="ranges.single_thumb_view"
  data-garden-version="version"
  type="range"
/>
`;

exports[`SingleThumbView renders default styling 1`] = `
.c0 {
  background-size: 0%;
}

<input
  className="c-range__input c0"
  data-garden-id="ranges.single_thumb_view"
  data-garden-version="version"
  type="range"
/>
`;

exports[`SingleThumbView renders disabled styling if provided 1`] = `
.c0 {
  background-size: 0%;
}

<input
  className="c-range__input is-disabled c0"
  data-garden-id="ranges.single_thumb_view"
  data-garden-version="version"
  disabled={true}
  type="range"
/>
`;

exports[`SingleThumbView renders focused styling if provided 1`] = `
.c0 {
  background-size: 0%;
}

<input
  className="c-range__input is-focused c0"
  data-garden-id="ranges.single_thumb_view"
  data-garden-version="version"
  type="range"
/>
`;

exports[`SingleThumbView renders hovered styling if provided 1`] = `
.c0 {
  background-size: 0%;
}

<input
  className="c-range__input c0"
  data-garden-id="ranges.single_thumb_view"
  data-garden-version="version"
  type="range"
/>
`;
